# hrl

./: .gitignore  cody_config_params.yaml  cody_params.yaml  hrl_haptic_mpc.rosinstall  hrl_tactile_controller.rosinstall  manifest.xml  mpc_params_cody.yaml  mpc_params_pr2.yaml  mpc_params_sim3.yaml  pr2_params.yaml  sim3_config_params.yaml  sim_params.yaml
advait_sandbox/point_cloud_ros/: CMakeLists.txt
advait_sandbox/point_cloud_ros/src/: filter_voxel_grid.cpp
advait_sandbox/point_cloud_ros/viz/: difference_viz.vcg
cpl/cpl_visual_features/: CMakeLists.txt  mainpage.dox  manifest.xml
cpl/cpl_visual_features/cfg/: sift-center-1024.txt  sift-center-256.txt  sift-center-512.txt  textons-1000.txt  textons-256.txt  textons-300.txt  textons-400.txt  textons-500.txt  textons-750.txt
cpl/cpl_visual_features/src/: depth_saliency_node.cpp  feature_tracker.cpp  run_saliency.cpp  sift_des_codebook_generation.cpp  sliding_window.cpp  test_offline.cpp  texture_test.cpp  train_textons.cpp
cpl/tabletop_pushing/: CMakeLists.txt  mainpage.dox  manifest.xml
cpl/tabletop_pushing/action/: SegTrack.action
cpl/tabletop_pushing/cfg/: pr2_arm_model0.txt
cpl/tabletop_pushing/launch/: kinect_segmenter.launch  object_singulation_perception.launch  offline_reactive_move.launch  offline_tabletop_system.launch  push_learn_perception.launch  reactive_move.launch  region_tracking.launch  standalone_perception_kinect.launch  tabletop_perception_kinect.launch  tabletop_pushing.launch  tabletop_system.launch  temp_cart.launch  temp_cartTwist.launch  temp_cart_ctrl.launch  visual_servo.launch
cpl/tabletop_pushing/msg/: PushVector.msg
cpl/tabletop_pushing/src/: extract_bag_images.cpp  flow_clustering.cpp  motion_graphcut.cpp  object_singulation_node.cpp  offline_segmenter.cpp  point_cloud_segmentation.cpp  ransac_segmenter.cpp  region_tracking.cpp  tabletop_pushing_perception_node.cpp  visual_servo.cpp
cpl/tabletop_pushing/srv/: GripperPush.srv  LearnPush.srv  LocateTable.srv  PushPose.srv  RaiseAndLook.srv  SingulationPush.srv
equilibrium_point_control/: CMakeLists.txt  package.xml  setup.py
equilibrium_point_control/epc_core/: m.xml
equilibrium_point_control/epc_door_opening/launch/: pr2_door_opening.launch
equilibrium_point_control/epc_door_opening/msg/: ForceTrajectory.msg
equilibrium_point_control/src/equilibrium_point_control/: hrl_arm.py
explore_hrl/: CMakeLists.txt  README.txt  mainpage.dox  manifest.xml
explore_hrl/include/explore_hrl/: Path.h  explore_action.h  loop_closure.h
explore_hrl/src/: Line.cpp  Vector.cpp  explore.cpp  explore_frontier.cpp  loop_closure.cpp
explore_hrl/src/explore_hrl/: python_client.py
feature_extractor_fpfh/: CMakeLists.txt  manifest.xml
feature_extractor_fpfh/msg/: FPFHHist.msg
feature_extractor_fpfh/src/: bag_reader.cpp  feature_extractor.cpp  fpfh_node.cpp
feature_extractor_fpfh/srv/: FPFHCalc.srv  SubsampleCalc.srv
hrl/point_cloud_ros/: CMakeLists.txt  README  mainpage.dox  manifest.xml
hrl/point_cloud_ros/launch/: og_converter.launch  og_difference.launch  og_sample.launch
hrl/point_cloud_ros/msg/: OccupancyGrid.msg
hrl/point_cloud_ros/src/: occupancy_grid.cpp  occupancy_grid_converter.cpp  og_to_pc.cpp  pc_to_og.cpp  pcd_read.cpp
hrl/pr2_overhead_grasping/: CMakeLists.txt  Makefile  manifest.xml  nodelet_plugins.xml
hrl/pr2_overhead_grasping/action/: OverheadGrasp.action  OverheadGraspSetup.action
hrl/pr2_overhead_grasping/launch/: collision_detection.launch  collision_detection_forearm.launch  collision_detection_mal.launch  collision_detection_train.launch  collision_detection_train_filtered.launch  collision_detection_train_mah.launch  collision_detection_uprarm.launch  init_params.launch  overhead_grasping_server.launch  simple_grasp_pipeline.launch  svm_train.launch
hrl/pr2_overhead_grasping/nodes/: test_grasp_action.py
hrl/pr2_overhead_grasping/params/: consistent.yaml  execution.yaml  features.yaml
hrl/pr2_overhead_grasping/src/: collision_monitor.cpp  collision_monitor_node.cpp  random_forest.cpp  sensor_filter.cpp  svm_one_class.cpp
hrl/pr2_overhead_grasping/yaml/: labels_dict_micro.yaml  labels_dict_mini.type.yaml
hrl_behaviors/hrl_table_detect/: CMakeLists.txt  manifest.xml
hrl_behaviors/hrl_table_detect/launch/: object_button_detector.launch  tabletop_detect_service.launch
hrl_behaviors/hrl_table_detect/src/: object_button_detector.cpp  table_approaches.cpp  test_normals.cpp
hrl_behaviors/hrl_table_detect/srv/: DetectTableInst.srv
hrl_cody_arms/: CMakeLists.txt  package.xml  setup.py
hrl_cody_arms/src/hrl_cody_arms/: cody_arm_kinematics.py  create_IK_guess_dict.py
hrl_experiments/hrl_phri_2011/: CMakeLists.txt  analysis_protocol.txt  mainpage.dox  manifest.xml  pr2_adls_study.txt
hrl_experiments/hrl_phri_2011/launch/: netft_zero_fix.launch  phri_netft_tracking.launch
hrl_experiments/hrl_phri_2011/matlab/: find_statistics.m  generate_table_stats.m  load_params.m  padadd.m  pca_analysis.m  plot_all_forces.m  plot_force_stats.m  pr2_forces_analysis.m  process_all.m  regression_filter.m  self_forces_analysis.m  show_rfx_mags.m  trapezoid.m  trapezoid_fit_plot.m  trapezoid_fitting.m
hrl_gazebo_plugin/gazebo_model_plugin/: CMakeLists.txt  ros_model_plugin.cc
hrl_gazebo_plugin/gazebo_world_plugin/: CMakeLists.txt  ros_world_plugin.cc
hrl_head_tracking/: CMakeLists.txt  mainpage.dox  manifest.xml
hrl_head_tracking/launch/: capture_pc.launch
hrl_head_tracking/src/: capture_pc.cpp  clickable_pc.cpp  head_alignment_confirm.cpp  head_tracking.cpp  head_tracking_srv.cpp  head_training.cpp  pcl_basic.cpp  pub_pc.cpp  test_face_detect.cpp
hrl_thermal_camera/: CMakeLists.txt  README.md  package.xml  setup.py
hrl_thermal_camera/cfg/: multisense.cfg  thermal_cfg.yaml
hrl_thermal_camera/cmake/: FindEbus.cmake
hrl_thermal_camera/launch/: cv_lib_test.launch  thermal_camera.launch  thermal_camera_old.launch
hrl_thermal_camera/params/: test.yml  thermal_camera_params.yml
hrl_thermal_camera/scripts/: reset.sh
zenither/: CMakeLists.txt  CMakeLists.txt~  package.xml  setup.py~
(+3241 files in other folders)
