<package>
  <name>equilibrium_point_control</name>
  <version>0.0.0</version>
  <description>Core functionality for using Equilibrium Point Control with
     different robots.</description>
  <maintainer email="deric.park@gatech.edu">Daehyung Park Advisor: Prof. Charlie Kemp.
      Healthcare Robotics Lab, Georgia Tech</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/equilibrium_point_control</url>

  <author>Advait Jain</author>
  <author>Kelsey Hawkins. Advisor: Prof. Charlie Kemp (Healthcare Robotics Lab)</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->

</package>