<package>
  <name>hrl_cody_arms</name>
  <version>0.0.0</version>
  <description>Control Meka Arms that HRL has on its robot Cody.</description>
  <maintainer email="deric.park@gatech.edu">Daehyung Park Advisor: Prof. Charlie Kemp.
      Healthcare Robotics Lab, Georgia Tech</maintainer>

  <license>New BSD</license>

  <url type="website">http://ros.org/wiki/hrl_cody_arms</url>

  <author>Advait Jain. Advisor: Prof. Charlie Kemp. Lab: Healthcare Robotics Lab</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kdl</build_depend>
  <build_depend>hrl_lib</build_depend>
  <build_depend>equilibrium_point_control</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>kdl</run_depend>
  <run_depend>hrl_lib</run_depend>
  <run_depend>equilibrium_point_control</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>std_srvs</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>kdl</test_depend> -->
  <!-- <test_depend>hrl_lib</test_depend> -->
  <!-- <test_depend>equilibrium_point_control</test_depend> -->

</package>