<?xml version="1.0"?>
<package>
    <name>hrl_thermal_camera</name>
    <version>0.0.1</version>
    <description>The hrl_thermal_camera package</description>
    <license>BSD</license>

    <maintainer email="akapusta@gatech.edu">Ari Kapusta</maintainer>
    <author>Ari Kapusta</author>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>yaml-cpp</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>image_geometry</build_depend>
    <build_depend>genmsg</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>message_runtime</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>usb_cam</build_depend>
    <build_depend>image_proc</build_depend>



    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>image_geometry</run_depend>
    <run_depend>genmsg</run_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>usb_cam</run_depend>
    <run_depend>image_proc</run_depend>


</package>
