<package>
  <name>zenither</name>
  <version>0.0.1</version>
  <description>The zenither package</description>
  <maintainer email="akapusta@gatech.edu">Ari Kapusta</maintainer>

  <license>BSD</license>

  <author>Ari Kapusta</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hrl_lib</build_depend>
  <build_depend>hrl_msgs</build_depend>
  <build_depend>hrl_srvs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>hrl_lib</run_depend>
  <run_depend>hrl_msgs</run_depend>
  <run_depend>hrl_srvs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>

</package>
